# toolchain

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  Makefile  README.md  meson.build
.github/workflows/: ci.yml  lint.yml
ase_environment/hw/: branch_jump_decoder.sv  circular_memory_unit.sv  control_interface.sv  control_pipeline.sv  control_unit.sv  data_blockram.sv  data_cache_controller.sv  decode.sv  fetch.sv  filelist.txt  hazard_detection_unit.sv  hazard_fifo.sv  instruction_blockram.sv  instruction_cache.sv  mem.sv  memA.sv  mem_wb.sv  memory_map.sv  proc.sv  proc_hier.sv  ram_single.sv  scalar_execute.sv  scalar_register_file.sv  synch_mem.sv  systolic_array.sv  vector_execute.sv  vector_register_file.sv
ase_environment/sw/: CardInterface.cpp  CardInterface.h  config.h  main.cpp
asm/: ast.h  dumpinstrs.cpp  emit.cpp  emit.h  lexer.cpp  lexer.h  main.cpp  meson.build  parser.cpp  parser.h  sema.cpp  sema.h  sema.yml  smoketest.py  symtab.cpp  symtab.h  tokens.def
asm/test/: jal.s  jalr.s
asm/test/smoketest/: bgzi.s  cmp.s  demo.s  labelspin.s  matmul.s  mem.s  misc.s  scalar_float.s  vector.s  vector.seed.json  vmem.s  vswizzle.s  vswizzle.seed.json
asm/tests/: basic_emission.s  boot.s  boot_sema.s  macros.s  mem.s  number_signs.s  parsing.s  sketch.s  stack.s
assembly/: Makefile  align_data.txt  bootloader.txt  conv_2d.txt  depthwise_conv_s1.txt  depthwise_conv_s2.txt  matmul.txt  mobilenet.txt  mobilenet_test.txt
aux/: debuggee-entitlement.xml
aux/subl/Morpheus Assembly/: Comments.tmPreferences
auxiliary/subl/Morpheus Assembly/: morpheus_asm.sublime-syntax
docs/: getting_started.md  preproc.md  terms_and_architecture.md  testgen.md  trace.md
firmware/: matmul.txt
host/: main.cpp  meson.build
isa/: doc.html  doc.py  formats.xlsx  isa.py  isa.yml
isa/templates/: base.html  doc.html
libmorph/: decoder.cpp  decoder.h  encoder.cpp  meson.build  ty.h  util.h  varint.h
libmorph/morph/: bit_cast.h  decoder.h  disasm.h  encoder.h  isa.h  ty.h  util.h  varint.h
libmorph/tests/: instr_decoder.cpp  instr_encoder.cpp  varint.cpp
scripts/: bin2mif.py
sim/: card_iface.h  cpu.cpp  cpu.h  debugger.cpp  debugger.h  instructions.h  iproxy.h  main.cpp  mem.cpp  mem.h  meson.build  rand.h  trace.cpp  trace.h  ty.h  varint.h
sim/tests/: instruction_impl.cpp
subprojects/: argparse.wrap  danielecli.wrap  json.wrap  linenoise.wrap  pcg.wrap
subprojects/packagefiles/danielecli/: meson.build
subprojects/packagefiles/linenoise/: meson.build
testgen/: main.cpp  meson.build  rand_scalar.py  rand_scalar_0.s  rand_vector.py
toolchain/ase_environment/hw/: FP_ALU.sv  Scalar_ALU.sv  Vector_ALU.sv  afu.sv  data_cache.sv  decode.sv  fifo_preload.sv  filelist.txt  icache_controller.sv  icache_metadata_registers.sv  icache_tag_blockram.sv  memB.sv  mem_controller.sv  metadata_registers.sv  next_metadata_comb.sv  proc.sv  ram_single.sv  scalar_execute.sv  scalar_register_file.sv  tag_blockram.sv  tpumac.sv  tpuv1.sv  vector_register_file.sv  wb.sv
toolchain/ase_environment/sw/: AFU.cpp  AFU.h  CardInterface.cpp  CardInterface.h  Makefile  config.h  main-dump.cpp  main.cpp
